--- a/info-resi.css
+++ b/info-resi.css
@@ -98,7 +98,7 @@ body {
 
 .artigo{
     position: relative;
-    width: 70%;
+    width: 80%;
     top: 120px;
     left: 100px;
 
@@ -106,9 +106,11 @@ body {
 
 
 .textoartigo{
-    font-size: 13pt;
+    font-size: 18pt;
+    color: rgba(0, 0, 0, 0.61);
     letter-spacing: 0.5px;
-    font-family: 'Quicksand', sans-serif;
+    line-height: 1.5em;
+    font-family: 'georgia', serif;
 }
 
 
