--- a/resimapa.css
+++ b/resimapa.css
@@ -58,7 +58,7 @@ header,
 aside,
 article,
 footer {
-  background: #eaeaea;
+
 
   padding: 1em;
 }
@@ -104,8 +104,6 @@ body {
 
 
 
-
-
 .menu{
     
     width: 35px;
@@ -137,6 +135,7 @@ ul.listaresi {
    
     position: relative;
     left: 100px;
+    width: 600px;
     top: 50px;
 }
 
@@ -145,7 +144,7 @@ ul.listaresi {
  #mapa {
      position: relative;
         margin-top: 15%;
-        left: 47%;
+        left: 50%;
         height: 500px;  /* The height is 400 pixels */
         width: 100%;  /* The width is the width of the web page */
         background-color: grey;
@@ -155,13 +154,15 @@ ul.listaresi {
 
 li a{
     text-decoration: none;
-    font-family: 'Quicksand', sans-serif;
-    color: #333;
-    transition: text-shadow .3s;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+    color: rgba(0, 0, 0, 0.418);
+    transition: all .3s;
 }
 
 li a:hover{
- font-family: 'Quicksand', sans-serif;
- text-shadow: 0 0 .65px #333, 0 0 .65px #333;
+ font-family: 'Poppins', sans-serif;
+ font-weight: 600;
+color: #008C9E ;
 
 }
